@@ -22,7 +22,6 @@
 
 #include <glib/gi18n.h>
 #include <string.h>
-#include <eel/eel-alert-dialog.h>
 #include <libgnomeui/gnome-icon-lookup.h>
 #include <libgnomevfs/gnome-vfs-ops.h>
 #include <libgnomevfs/gnome-vfs-uri.h>
@@ -39,7 +38,6 @@
 #define GCONF_SEND_TO_CMD_KEY       "/desktop/gnome/applications/main-menu/file-area/file_send_to_cmd"
 #define GCONF_ENABLE_DELETE_KEY_DIR "/apps/nautilus/preferences"
 #define GCONF_ENABLE_DELETE_KEY     GCONF_ENABLE_DELETE_KEY_DIR "/enable_delete"
-#define GCONF_CONFIRM_DELETE_KEY    GCONF_ENABLE_DELETE_KEY_DIR "/confirm_trash"
 
 G_DEFINE_TYPE (DocumentTile, document_tile, NAMEPLATE_TILE_TYPE)
 
@@ -418,9 +416,6 @@ load_image (DocumentTile *tile)
 {
 	DocumentTilePrivate *priv = DOCUMENT_TILE_GET_PRIVATE (tile);
 
-	GdkPixbuf *thumb;
-	gchar *thumb_path;
-
 	gchar *icon_id = NULL;
 	gboolean free_icon_id = TRUE;
 
@@ -434,32 +429,7 @@ load_image (DocumentTile *tile)
 	if (! thumbnail_factory)
 		thumbnail_factory = gnome_thumbnail_factory_new (GNOME_THUMBNAIL_SIZE_NORMAL);
 
-	thumb_path = gnome_thumbnail_factory_lookup (thumbnail_factory, TILE (tile)->uri, priv->modified);
-
-	if (!thumb_path) {
-		if (
-			gnome_thumbnail_factory_can_thumbnail (
-				thumbnail_factory, TILE (tile)->uri, priv->mime_type, priv->modified)
-		) {
-			thumb = gnome_thumbnail_factory_generate_thumbnail (
-				thumbnail_factory, TILE (tile)->uri, priv->mime_type);
-
-			if (thumb) {
-				gnome_thumbnail_factory_save_thumbnail (
-					thumbnail_factory, thumb, TILE (tile)->uri, priv->modified);
-
-				icon_id = gnome_thumbnail_factory_lookup (
-					thumbnail_factory, TILE (tile)->uri, priv->modified);
-
-				g_object_unref (thumb);
-			}
-			else
-				gnome_thumbnail_factory_create_failed_thumbnail (
-					thumbnail_factory, TILE (tile)->uri, priv->modified);
-		}
-	}
-	else
-		icon_id = thumb_path;
+	icon_id = gnome_thumbnail_factory_lookup (thumbnail_factory, TILE (tile)->uri, priv->modified);
 
 	if (! icon_id)
 		icon_id = gnome_icon_lookup (
@@ -798,36 +768,11 @@ delete_trigger (Tile *tile, TileEvent *event, TileAction *action)
 {
 	DocumentTilePrivate *priv = DOCUMENT_TILE_GET_PRIVATE (tile);
 
-	gchar     *prompt;
-	GtkDialog *confirm_dialog;
-	gint       result;
-
 	GnomeVFSURI *src_uri;
 	GList *list = NULL;
 
 	GnomeVFSResult retval;
 
-
-	if (GPOINTER_TO_INT (libslab_get_gconf_value (GCONF_CONFIRM_DELETE_KEY))) {
-		prompt = g_strdup_printf (
-			_("Are you sure you want to permanently delete \"%s\"?"), priv->basename);
-
-		confirm_dialog = GTK_DIALOG (eel_alert_dialog_new (
-			NULL, 0, GTK_MESSAGE_WARNING, GTK_BUTTONS_NONE,
-			prompt, _("If you delete an item, it is permanently lost.")));
-							
-		gtk_dialog_add_button (confirm_dialog, GTK_STOCK_CANCEL, GTK_RESPONSE_CANCEL);
-		gtk_dialog_add_button (confirm_dialog, GTK_STOCK_DELETE, GTK_RESPONSE_YES);
-		gtk_dialog_set_default_response (GTK_DIALOG (confirm_dialog), GTK_RESPONSE_YES);
-
-		result = gtk_dialog_run (confirm_dialog);
-
-		gtk_widget_destroy (GTK_WIDGET (confirm_dialog));
-		g_free (prompt);
-
-		if (result != GTK_RESPONSE_YES)
-			return;
-	}
 
 	src_uri = gnome_vfs_uri_new (TILE (tile)->uri);
 
